# msvcup

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pixi.toml
.github/workflows/: build-and-upload.yml  ci.yml  e2e.yml  release-plz.yml  release.yml
docs/: architecture.md
recipe/: activate.bat  deactivate.bat  install_vs.py  recipe.yaml  variants.yaml
src/: arch.rs  autoenv_cmd.rs  channel_kind.rs  config.rs  extra.rs  fetch_cmd.rs  install.rs  lock_file.rs  lockfile_parse.rs  main.rs  manifest.rs  msi_extract.rs  packages.rs  resolve_cmd.rs  sha.rs  util.rs  zip_extract.rs
